[tool.poetry]
name = "kobo-export"
version = "0.1.0"
description = ""
authors = ["Adam Kelly <adam@cthulahoops.org>"]
readme = "README.md"
packages = [{include = "kobo_export"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
